# red_note_agent

./: .env.example  .gitignore  CHEATSHEET.md  DESIGN.md  DESIGN_v5.md  HANDOFF.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
alembic/: README  env.py
alembic/versions/: 0fa8bc936ad9_s6_posts_v5_fields.py  61cb8cc42130_s5_review_theme_stats_daily_review_.py  afdc526a7e43_s8_price_snapshots.py  b03503d50f7a_add_post_cover_image_path_field.py  b29461fa0785_add_post_objective_snapshot_field.py  d6df8f392d34_initial_schema.py
deploy/: setup_server.sh  xhs-bot.service  xhs-scheduler.service
scripts/: add_exemplar.py  cleanup_old_images.py  inspect_db.py  log_post_result.py  reset_posts.py  run_pipeline_once.py  run_scheduler.py  run_telegram_bot.py
src/xhs_agent/: __init__.py
src/xhs_agent/agents/: __init__.py  buy_or_wait.py  buy_rec_rewriter.py  compliance_guard.py  content_agent.py  content_director.py  opinion_miner.py  review_miner.py  rewrite_agent.py  signal_agent.py
src/xhs_agent/budget/: __init__.py  guard.py
src/xhs_agent/config/: __init__.py  persona.yaml  settings.py  tuning.py  tuning.yaml
src/xhs_agent/domain/: __init__.py  base.py
src/xhs_agent/observability/: __init__.py  llm_tracker.py  logger.py
src/xhs_agent/orchestration/: __init__.py  pipeline.py  (+2 more)
tests/: conftest.py
tests/fixtures/: steam_featured_sample.json  steam_top_concurrent_sample.json
tests/unit/: test_agent_parsing.py  test_formatter.py  test_hashtag_policy.py  test_prohibited_words.py  test_signal_detectors.py  test_steam_collector_parsing.py  test_title_validator.py
(+56 files in other folders)
