[project]
name = "xhs-game-agent"
version = "0.1.0"
description = "Semi-automated 小红书 game content creation agent"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # LLM
    "anthropic>=0.40.0",
    # Config / settings
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # HTTP
    "httpx>=0.27",
    "requests>=2.32",
    # HTML parsing for Chinese forums (NGA/贴吧/虎扑)
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    # Telegram bot
    "python-telegram-bot[job-queue]>=21.0",
    # Scheduler
    "apscheduler>=3.10",
    # Logging
    "structlog>=24.1",
    # CLI
    "typer>=0.12",
    "matplotlib>=3.10.9",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
trend = [
    # Reddit API
    "praw>=7.7",
    # Bilibili (unofficial, V1)
    "bilibili-api-python>=16.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipython>=8.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xhs_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
